--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,73 @@
 .App {
-  text-align: center;
+    max-width: 96rem;
+    padding: 2rem;
+    color: #000;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+img {
+    height: 60px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+p {
+    margin: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.style_l {
+    font-weight: 900;
+    font-size: 2.45rem;
+    margin-top: 3rem;
 }
 
-.App-link {
-  color: #61dafb;
+.style_l2 {
+    font-weight: 900;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.style_s {
+    margin-top: 1.5rem;
+    max-width: 450px;
+    line-height: 1.4;
+    font-size: 1.25rem;
 }
+
+.style_s2 {
+    font-weight: 900;
+    text-transform: uppercase;
+    padding-top: 0.12em;
+    color: #000;
+    text-decoration: underline;
+    text-decoration-color: #e0245e;
+    font-size: 1.75rem;
+}
+
+.style_s2::before {
+    display: block;
+    content: "";
+    margin-top: 1rem;
+}
+
+.style_s2:hover {
+    background-color: #e0245e;
+    color: #fff;
+}
+
+nav {
+    margin-top: 3rem;
+}
+
+@media (min-width: 350px) {
+    .style_l, .style_l2 {
+        font-size: 2.95rem;
+    }
+}
+
+@media (min-width: 35em) {
+    .style_l, .style_l2 {
+        font-size: 3.35rem;
+    }
+    .style_s {
+        font-size: 1.35rem;
+    }
+    .style_s2 {
+        font-size: 1.8rem;
+    }
+} 
