feat: dark mode

--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+/* Global styles from src/index.css */
+body {
+  margin: 0;
+  font-family: "Avenir Next", system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, "Noto Sans", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-size: 14px;
+}
+
+/* Styles from src/App.css */
 .App {
     max-width: 96rem;
     padding: 2rem;
